package ingredient;

public abstract class Meat implements Ingredient {

}
