@startuml

title __DESIGNPATTERN-BUILDER's Class Diagram__\n

  namespace ingredient {
    class ingredient.Cheddar {
    }
  }
  

  namespace ingredient {
    class ingredient.DeepFriedOnions {
    }
  }
  

  namespace ingredient {
    interface ingredient.Ingredient {
    }
  }
  

  namespace ingredient {
    class ingredient.IngredientFactory {
    }
  }
  

  namespace ingredient {
    abstract class ingredient.Meat {
    }
  }
  

  namespace ingredient {
    class ingredient.MeatBeef {
    }
  }
  

  namespace ingredient {
    class ingredient.MeatWhitefish {
    }
  }
  

  namespace ingredient {
    abstract class ingredient.Sauce {
    }
  }
  

  namespace ingredient {
    class ingredient.SauceBarbecue {
    }
  }
  

  namespace ingredient {
    class ingredient.SauceBurger {
    }
  }
  

  namespace ingredient {
    class ingredient.Tomato {
    }
  }
  

  ingredient.Cheddar .up.|> ingredient.Ingredient
  ingredient.DeepFriedOnions .up.|> ingredient.Ingredient
  ingredient.Meat .up.|> ingredient.Ingredient
  ingredient.MeatBeef -up-|> ingredient.Meat
  ingredient.MeatWhitefish -up-|> ingredient.Meat
  ingredient.Sauce .up.|> ingredient.Ingredient
  ingredient.SauceBarbecue -up-|> ingredient.Sauce
  ingredient.SauceBurger -up-|> ingredient.Sauce
  ingredient.Tomato .up.|> ingredient.Ingredient


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
